# media-signing-framework

./: .clang-format  .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  meson.build  meson_options.txt  pre-commit.sh  test_apps.sh  valgrind.supp
.github/workflows/: approval-workflow.yml  meson-build-apps.yml  meson-build.yml  meson-full-build.yml
VS2022/: README.md  REAMDE.md  VS2022.sln  config.h  signed-media-framework.vcxproj  signed-media-framework.vcxproj.filters  signed-video-framework.vcxproj  signed-video-framework.vcxproj.filters  signer.vcxproj  signer.vcxproj.filters  validator.vcxproj  validator.vcxproj.filters
examples/: README.md  meson.build
examples/apps/signer/: README.md  main.c  meson.build
examples/apps/signer/gst-plugin/: gst-signing-plugin.c  gstsigning.c  gstsigning.h  gstsigning_defines.h  meson.build
examples/apps/validator/: README.md  main.c  meson.build
examples/test-files/: README.md
lib/: README.md  meson.build
lib/plugins/: README.md  meson.build
lib/plugins/threaded-signing/: plugin.c
lib/plugins/unthreaded-signing/: plugin.c
lib/src/: README.md  meson.build  oms_authenticity_report.c  oms_authenticity_report.h  oms_common.c  oms_defines.h  oms_helpers.c  oms_internal.h  oms_nalu_list.c  oms_nalu_list.h  oms_openssl.c  oms_openssl_internal.h  oms_signer.c  oms_tlv.c  oms_tlv.h  oms_tmp_definitions.c  oms_validator.c  onvif_signer.c  onvif_validator.c
lib/src/includes/: onvif_media_signing_common.h  onvif_media_signing_helpers.h  onvif_media_signing_plugin.h  onvif_media_signing_signer.h  onvif_media_signing_validator.h  onvif_signer.h  onvif_validator.h
tests/: README.md  ca_ec.key  ca_ec.pem  ca_ec.srl  ec_cert_chain.pem  ec_signing.crt  ec_signing.csr  ec_signing.key  generate-cert.sh  rsa_cert_chain.pem  rsa_signing.crt  rsa_signing.csr  rsa_signing.key  run_check_tests.sh  signing_cert_ec.crt  signing_cert_ec.csr  signing_cert_rsa.crt  signing_cert_rsa.csr  signing_key_ec.key  signing_key_rsa.key  test_checks.sh  test_openssl.cnf
tests/check/: check_onvif_media_signing_common.c  check_onvif_media_signing_signer.c  check_onvif_media_signing_validator.c  meson.build  test_helpers.c  test_helpers.h  test_stream.c  test_stream.h
